<resources>
    <string name="app_name">Munato</string>
    <string name="log_in_img_description">Beautiful background image</string>
    <string name="log_in_button_text">Start journey →</string>
    <string name="log_in_hello_user_text">Hello, </string>
    <string name="log_in_hello_user_placeholder">user</string>
    <string name="log_in_email_prefix">E-Mail: </string>
    <string name="log_out_button_text">Login another account</string>
    <string name="log_out_another_device_text">Please log in to your account again</string>
    <string name="log_out_error_text">Failed to logout from your account</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_create">Create</string>
    <string name="nav_collection">Collection</string>
    <string name="fragment_collection_my">My paintings</string>
    <string name="fragment_collection_favourites">Favourites</string>
    <string name="painting_view_editor_action_bar_publish">Publish</string>
    <string name="painting_view_editor_action_bar_open_editor">Open editor</string>
    <string name="fragment_publish_button">Publish</string>
    <string name="fragment_publish_author_label">Author</string>
    <string name="fragment_publish_author_hint">Write your name here</string>
    <string name="fragment_publish_title_label">Title</string>
    <string name="fragment_publish_title_hint">Write painting title here</string>
    <string name="fragment_publish_public_code_label">Make my code public</string>
    <string name="fragment_publish_painting_id_label">Painting ID</string>
    <string name="fragment_publish_painting_id_placeholder">0xCAFEBABE</string>
    <string name="collection_itm_painting_name_placeholder">Painting name</string>
    <string name="collection_itm_edit_button">Edit</string>
    <string name="collection_itm_painting_stars_placeholder">10</string>
    <string name="painting_view_explore_action_bar_fork">Fork</string>
    <string name="fragment_publish_userImage">Your image here</string>
    <string name="painting_view_explore_action_bar_to_favourite">To favourite</string>
    <string name="painting_view_explore_action_bar_add_star">Add star</string>
    <string name="login_err_code">Failed to login. Error code:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collection_itm_fork_button">Fork</string>
</resources>