<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_star"
        android:icon="@drawable/outline_star_outline_white_24"
        android:title="@string/painting_view_explore_action_bar_add_star"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add_to_favourite"
        android:icon="@drawable/outline_favorite_border_white_24"
        android:title="@string/painting_view_explore_action_bar_to_favourite"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_fork"
        android:icon="@drawable/outline_alt_route_white_24"
        android:title="@string/painting_view_explore_action_bar_fork"
        app:showAsAction="ifRoom"/>

</menu>