<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    tools:context=".activity.EntryActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:tintMode="src_over"
        app:srcCompat="@drawable/pexels_karolina_grabowska_4046810"
        app:tint="#25AC6D4B"
        android:contentDescription="@string/log_in_img_description" />

    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:elevation="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/primaryDarkColor"
            android:fontFamily="@font/questrial"
            android:text="@string/log_in_button_text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="100dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/primaryDarkColor"
            android:fontFamily="@font/questrial"
            android:text="@string/log_out_button_text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="100dp" />

    </LinearLayout>

</FrameLayout>