<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.PublishPaintingFragment"
    android:clipToPadding="false"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="27dp"
                    app:cardUseCompatPadding="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_publish_author_label"
                        android:textColor="@color/primaryColor"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextTextPersonName3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:ems="10"
                        android:hint="@string/fragment_publish_author_hint"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_publish_title_label"
                        android:textColor="@color/primaryColor"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextTextPersonName4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginRight="-4dp"
                        android:ems="10"
                        android:hint="@string/fragment_publish_title_hint"
                        android:inputType="textPersonName" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/fragment_publish_public_code_label"
                        android:textColor="@color/primaryColor"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_painting_id_bar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/primaryTextColor">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/fragment_publish_painting_id_label"
                        android:textColor="@color/primaryColor"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:paddingTop="5dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="5dp"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_publish_recreate_paintign_id"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:iconPadding="0dp"
                            android:padding="0dp"
                            android:insetLeft="0dp"
                            android:insetTop="0dp"
                            android:insetRight="0dp"
                            android:insetBottom="0dp"
                            app:iconGravity="textStart"
                            android:layout_marginEnd="5dp"
                            app:icon="@drawable/outline_autorenew_black_24" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_publish_copy_painting_id"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:iconPadding="0dp"
                            android:padding="0dp"
                            android:insetLeft="0dp"
                            android:insetTop="0dp"
                            android:insetRight="0dp"
                            android:insetBottom="0dp"
                            app:iconGravity="textStart"
                            app:icon="@drawable/outline_content_copy_24" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_painting_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="7"
                    android:padding="10dp"
                    android:fontFamily="@font/jetbrainsmono_regular"
                    android:background="@color/primaryBackgroundColor"
                    android:text="@string/fragment_publish_painting_id_placeholder" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        app:cornerRadius="100dp"
        android:text="@string/fragment_publish_button"/>

</LinearLayout>